<?xml version="1.0"?>
<package format="2">
  <name>alica_solver_interface</name>
  <version>0.9.4</version>
  <description>The alica_solver_interface package</description>
  <maintainer email="hendrik@rapyuta-robotics.com">hendrik</maintainer>

  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

  <test_depend>gtest</test_depend>
</package>
