<?xml version="1.0"?>
<package format="2">
  <name>alica_test_utility</name>
  <version>0.9.4</version>
  <description>The alica_test_support package</description>

  <maintainer email="stephan.opfer@rapyuta-robotics.com">Stephan Opfer</maintainer>

  <license>MIT</license>

  <author email="stephan.opfer@rapyuta-robotics.com">Stephan Opfer</author>

  <depend>alica_engine</depend>
  <depend>alica_dummy_proxy</depend>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
