<?xml version="1.0"?>
<package>
  <name>agent_id</name>
  <version>0.0.0</version>
  <description>The agent_id package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>MIT</license>

  <author email="opfer@vs.uni-kassel.de">Stephan Opfer</author>


  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <test_depend>gtest</test_depend>
  <export>
  </export>
</package>
